[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ultimate_uploader"
authors = [{name = "Joris Yidong Scholl", email = "joris.scholl@posteo.de"}]
readme = "README.md"
version = "0.0.1"
description = ""
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
